# Rustnithm-Server

./: .gitignore  Build_v2.ps1  README.md  flutter_rust_bridge.yaml  pubspec.yaml
lib/: bridge_generated.dart  data.dart  main.dart
lib/data/: io.dart  state.dart
lib/src/rust/: api.dart  protocol.dart
lib/widgets/: Config.dart  Header.dart  Visualizer.dart
native/: Build.ps1  Cargo.toml
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  frb_generated.rs  lib.rs  protocol.rs  server.rs  shmem.rs
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
