[package]
name = "rustnithm_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "1.82.6"
lazy_static = "1.4.0"
shared_memory = "0.12.4"

tokio = { version = "1.35", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.42"

[build-dependencies]
